# TicTacToe

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: menu.cpp  menu.h  ticTacToe.cpp  ticTacToe.h  ticTacToeCell.cpp  ticTacToeCell.h
src/players/: computer.cpp  computer.h  human.cpp  human.h  player.cpp  player.h
